/*
 * test_records_nested_as_record.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2019 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.nestedasrecord;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestRecordsNestedAsRecord";

import "record_metadata_options.proto";

message OuterRecord {
    message InnerRecord {
        optional int64 rec_no = 1 [(field).primary_key = true];
    }
    optional int64 rec_no = 1 [(field).primary_key = true];
    optional InnerRecord inner = 2;
}

message OtherRecord {
    optional int64 rec_no = 1 [(field).primary_key = true];
}

message RecordTypeUnion {
    optional OuterRecord.InnerRecord _InnerRecord = 1;
    optional OuterRecord _OuterRecord = 2;
    optional OtherRecord _OutherRecord = 3;
}
